crates/tuna/tests/parser/fail/big-neg-int-literal.som
"test:
fail-message:
  - contains: number literal
  - contains: too large
"

BigNegIntLiteral = (
  run = (
    ^-9223372036854775809.
  )
)
